--- a/scss/_mixing.scss
+++ b/scss/_mixing.scss
@@ -1,4 +1,5 @@
 @use 'sass:map';
+@use 'sass:meta';
 @use "_variables" as *;
 
 @mixin containers($width: 100%,$height: 100dvh,$display:null,$gap:0px,$padding:0px,$direction: column,$justify: center,$align: center) {
@@ -49,16 +50,15 @@
     }
 }
 @mixin respond-between($min, $max) {
-    $min-width: map.get($breakpoints, $min);
-    $max-width: map.get($breakpoints, $max);
-    
-    @if $min-width and $max-width {
-      @media (min-width: #{$min-width}) and (max-width: #{$max-width}) {
-        @content;
-      }
-    } @else {
-      @warn "Uno o ambos de los puntos de quiebre '#{$min}' o '#{$max}' no existen en el mapa.";
+  $min-width: map.get($breakpoints, $min);
+  $max-width: map.get($breakpoints, $max);
+  $max-width-nonoverlap: if(meta.type-of($max-width) == 'number', $max-width - 0.02px, $max-width);
+  @if $min-width and $max-width {
+    @media (min-width: #{$min-width}) and (max-width: #{$max-width-nonoverlap}) {
+      @content;
     }
+  } @else {
+    @warn "Uno o ambos de los puntos de quiebre '#{$min}' o '#{$max}' no existen en el mapa.";
   }
+}
 
-  
